add structure in HTML

--- a/index.html
+++ b/index.html
@@ -7,6 +7,12 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+
+    <div class="form-wrap">
+        <input type="text" id="text" placeholder="podaj wyraz">
+        <input type="submit" value="Szyfruj">
+    </div>
+
     <script src="main.js"></script>
 </body>
 </html>
