--- a/index.html
+++ b/index.html
@@ -3,15 +3,19 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Szyfr Cezara</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <h1>Szyfr Cezara</h1>
+    <form class="form-wrap"  autocomplete="off">
+        <input class="input" type="text" id="text" placeholder="podaj wyraz">
+        <input class="btn" type="submit" value="Szyfruj">
+    </form>
+    
+    <p></p>
+    
 
-    <div class="form-wrap">
-        <input type="text" id="text" placeholder="podaj wyraz">
-        <input type="submit" value="Szyfruj">
-    </div>
 
     <script src="main.js"></script>
 </body>
