--- a/index.html
+++ b/index.html
@@ -20,6 +20,6 @@
     
 
 
-    <script src="dist/main.1f19ae8e.js.map"></script>
+    <script src="dist/main.1f19ae8e.js"></script>
 </body>
 </html>
