--- a/index.html
+++ b/index.html
@@ -35,6 +35,6 @@
       <p class="result-text"></p>
     </div>
 
-    <script src="/dist/main.1f19ae8e.js"></script>
+    <script src="dist/main.1f19ae8e.js"></script>
   </body>
 </html>
