--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
           <option value="10">10</option>
           <option value="11">11</option>
           <option value="12">12</option>
-          <option value="13">13</option>
+          <option selected value="13">13</option>
         </select>
       </div>
       <input class="btn" type="submit" value="Szyfruj" />
@@ -35,6 +35,6 @@
       <p class="result-text"></p>
     </div>
 
-    <script src=main.js></script>
+    <script src="dist/main.1f19ae8e.js"></script>
   </body>
 </html>
