--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <form class="form-wrap" autocomplete="off">
       <input class="input" type="text" id="text" placeholder="podaj wyraz" />
       <div class="rot">
-        <label for="rot-number" class="rot">ROT</label>
+        <label for="rot-number" class="rot">ROT:</label>
         <select name="select-number" id="rot-number">
           <option value="1">1</option>
           <option value="2">2</option>
@@ -25,7 +25,7 @@
           <option value="10">10</option>
           <option value="11">11</option>
           <option value="12">12</option>
-          <option value="13">13</option>
+          <option selected value="13">13</option>
         </select>
       </div>
       <input class="btn" type="submit" value="Szyfruj" />
